src/util/db/snapshots/roadster__util__db__sea_orm__tests__drop_database_statement.snap
---
source: src/util/db/sea_orm.rs
expression: statement
---
Statement {
    sql: "DROP DATABASE IF EXISTS \"test\" WITH (FORCE)",
    values: None,
    db_backend: Postgres,
}
